fix navbar alignment again

--- a/css/custom.css
+++ b/css/custom.css
@@ -73,7 +73,7 @@ box-shadow: none;
     margin-bottom: 0px;
     padding: 10px 5px;
     min-height: 0;
-    
+
     display: flex;
     align-items: center;
 }
@@ -161,6 +161,9 @@ iframe
 
 .navbar {
     margin-bottom: 0px;
+
+    display: flex;
+    align-items: center;
 }
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus
